Footer is now longer to stop scrollbars disappearing when viewing shorter results list.

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,9 @@ i {
     -webkit-transition: none !important;
     transition: none !important;
 }
+.footer {
+  padding: 10px 0px 20px 0px;
+}
 
 
 
